Made all communication with data through database.

--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -63,7 +63,7 @@
             <div class="col-12 col-lg-4">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
-                        <strong>{{mutation}}</strong></h3>
+                        <strong>{{mutation_info_header}}</strong></h3>
                           <p class="mbr-text mbr-fonts-style display-7">{{mutation_info}}</p>
                 </div>
             </div>
