--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -22,7 +22,7 @@
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         </style>
         <link rel="stylesheet" href="static/css/style.css">
-
+        <script src="static/js/script.js"></script>
         {{ bokeh_css | indent(8) if bokeh_css }}
         {% endblock %}
 
@@ -43,12 +43,6 @@
 
     <div onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</div>
     <div onclick="home()" class="w3-right w3-button">{{home_button_text}}</div>
-    <div class="w3-dropdown-click w3-right">
-      <button onclick="myFunction('dropdown')" class="w3-button w3-black">
-        {{mutation_choice_button_text}}
-      </button>
-      <div id="dropdown:" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
-    </div>
   </header>
 
   <div class="w3-container w3-center w3-border w3-border-red w3-round-xxlarge w3-center w3-margin w3-grey">
@@ -58,20 +52,41 @@
   </div>
 
   <div class="w3-row w3-margin w3-padding">
-    <p class="w3-strong info_header_text">
-      {{mutation_info_header}}
-    </p>
+    <div class="w3-row w3-green">
+      <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col l1 m2 s3">
+        <button onclick="mainDropdown()" class="w3-button w3-black" style="min-width: 100%">
+          {{gene_choice_button_text}}
+        </button>
+        <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
+      </div>
+      <div class="w3-container w3-col l1 m1 s1"></div>
+      <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col l1 m2 s3" id="mutation">
+        <button class="w3-button w3-black" id="mutationDropdownButton" style="min-width: 100%">
+          {{mutation_choice_button_text}}
+        </button>
+      </div>
+      <div class="w3-container w3-green w3-padding w3-col l7 m3 s2"></div>
+      <div onclick="updateMutation('{{mutation}}')" class="w3-button w3-col l2 m4 s3" id="updateMutation">
+        <p>{{update_mutation_button_text}}:</p>
+        <p class="w3-strong" id="updateMutationText">
+          {{mutation}}
+        </p>
+      </div>
+    </div>
     <div class="w3-row w3-green">
       <div class="w3-container w3-padding-24 w3-col l10 m9 s8">
         <div id="dateRangeSlider"></div>
       </div>
       <div onclick="updateDate('{{min_date}}', '{{max_date}}')" class="w3-green w3-button w3-col l2 m3 s4" id="updateDate">
-        <p>{{update_button_text}}:</p>
+        <p>{{update_date_button_text}}:</p>
         <p class="w3-strong" id="updateDateText">
           {{min_date}} - {{max_date}}
         </p>
       </div>
     </div>
+    <p class="w3-strong info_header_text">
+      {{mutation_info_header}}
+    </p>
     <div class="w3-border">
       <div id="coronaplot"></div>
     </div>
@@ -89,119 +104,10 @@
    </div>
    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
-<script>
-  var dropdown = document.getElementById("dropdown:");
-  var mutations = {{mutations_names}};
-  var url_string = window.location.href;
-  var url = new URL(url_string);
-  var language = url.searchParams.get("lang");
-  var max_date = url.searchParams.get("max_date");
-  var min_date = url.searchParams.get("min_date");
-  var mutation = mutations[0];
-  var mutation_array = mutation.split(':');
-  var previous_gene = mutation_array[0];
-  var gene_button = document.createElement("div");
-  gene_button.className = "w3-bar-item w3-dropdown-click";
-  var gene_button_button = document.createElement("button");
-  gene_button_button.id = previous_gene;
-  gene_button_button.textContent = previous_gene;
-  gene_button_button.className = "w3-button";
-  gene_button_button.onclick = function() {myFunction(this.id)};
-  var gene_button_content = document.createElement("div");
-  gene_button_content.id = previous_gene + ":";
-  gene_button_content.className = "w3-dropdown-content w3-bar-block w3-border";
-  gene_button.appendChild(gene_button_button);
-  gene_button.appendChild(gene_button_content);
-  dropdown.appendChild(gene_button);
-  for (var i = 0; i < mutations.length; i++) {
-    var mutation = mutations[i];
-    var mutation_array = mutation.split(':');
-    var gene = mutation_array[0];
-    var mutation_name = mutation_array[1];
-    if (gene != previous_gene)
-    {
-        var previous_gene = gene;
-        var gene_button = document.createElement("div");
-        gene_button.className = "w3-bar-item w3-dropdown-click";
-        var gene_button_button = document.createElement("button");
-        gene_button_button.id = gene;
-        gene_button_button.textContent = gene;
-        gene_button_button.className = "w3-button";
-        gene_button_button.onclick = function() {myFunction(this.id)};
-        var gene_button_content = document.createElement("div");
-        gene_button_content.id = gene + ":";
-        gene_button_content.className = "w3-dropdown-content w3-bar-block w3-border";
-        gene_button.appendChild(gene_button_button);
-        gene_button.appendChild(gene_button_content);
-        dropdown.appendChild(gene_button);
-
-    }
-    var mutation_button = document.createElement("a");
-    mutation_button.textContent = mutation_name;
-    mutation_button.className = "w3-bar-item w3-button";
-    mutation_button.href = `/?mutation=${mutation}&lang=${language}&min_date=${min_date}&max_date=${max_date}`;
-    gene_button_content.appendChild(mutation_button);
-  }
-
-
-  var mutation = url.searchParams.get("mutation");
-
-  fetch(`/plot?mutation=${mutation}&lang=${language}&max_date=${max_date}&min_date=${min_date}`)
-      .then(function(response) { return response.json(); })
-      .then(function(item) { return Bokeh.embed.embed_item(item, "coronaplot"); })
-
-  fetch(`/dateRangeSlider?mutation=${mutation}&lang=${language}&max_date=${max_date}&min_date=${min_date}`)
-      .then(function(response) { return response.json(); })
-      .then(function(item) { return Bokeh.embed.embed_item(item, "dateRangeSlider"); })
-
-
-  function switch_lang() {
-    var url_string = window.location.href;
-    var url = new URL(url_string);
-    var mutation = url.searchParams.get("mutation");
-    var language = url.searchParams.get("lang");
-    var max_date = url.searchParams.get("max_date");
-    var min_date = url.searchParams.get("min_date");
-    if (language == "EN")
-    {
-      language = "RU";
-    }
-    else
-    {
-      language = "EN";
-    }
-    window.location.href=(`/?mutation=${mutation}&lang=${language}&min_date=${min_date}&max_date=${max_date}`);
-  }
-
-
-  function home() {
-    var url_string = window.location.href;
-    var url = new URL(url_string);
-    var language = url.searchParams.get("lang");
-    var max_date = url.searchParams.get("max_date");
-    var min_date = url.searchParams.get("min_date");
-    window.location.href=(`/?mutation=ALL&lang=${language}&min_date=${min_date}&max_date=${max_date}`);
-  }
-
-
-  function myFunction(id) {
-  var x = document.getElementById(id + ":");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-  }
-
-  function updateDate(min_date, max_date) {
-    var mutation = url.searchParams.get("mutation");
-    var language = url.searchParams.get("lang");
-    window.location.href=(`/?mutation=${mutation}&lang=${language}&min_date=${min_date}&max_date=${max_date}`);
-  }
-
-
-</script>
-
+  <script>
+    var mutations = {{mutations_names}};
+    init(mutations);
+  </script>
 </body>
 {% endblock %}
 </html>
