--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
-        html,body,h1,h2,h3,h4,h5,h6 {font-family: "Garamond", sans-serif;}
+        html,body,h1,h2,h3,h4,h5,h6 {font-family: "EB Garamond", serif;}
         </style>
         <link rel="stylesheet" href="/static/css/style.css">
         <script src="/static/js/script.js"></script>
