--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
-        html,body,h1,h2,h3,h4,h5,h6 {font-family: "EB Garamond", serif;}
+        html,body,h1,h2,h3,h4,h5,h6 {font-family: "EB Garamond", sans-serif;}
         </style>
         <link rel="stylesheet" href="/static/css/style.css">
         <script src="/static/js/script.js"></script>
@@ -39,58 +39,58 @@
 <body>
   <header class="w3-bar w3-green">
     <img src="static/img/logo.png" class="w3-image w3-margin" width="100" height="100">
-
-
     <div onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</div>
-    <div onclick="home()" class="w3-right w3-button">{{home_button_text}}</div>
+    <div class="w3-container w3-center w3-border w3-border-red w3-round-xxlarge w3-center w3-margin w3-grey">
+      <p class="welcome_text">
+        {{welcome_text}}
+      </p>
+    </div>
   </header>
 
-  <div class="w3-container w3-center w3-border w3-border-red w3-round-xxlarge w3-center w3-margin w3-grey">
-    <p class="welcome_text">
-      {{welcome_text}}
-    </p>
-  </div>
 
   <div class="w3-row w3-margin w3-padding">
-    <div class="w3-row w3-green">
-      <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col l5 m4">
-        <button onclick="mainDropdown()" class="w3-button w3-black" style="min-width: 100%">
-          <p style="display:inline;">{{gene_choice_button_text}}</p>
-        </button>
-        <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
-      </div>
-      <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col l5 m4" id="mutation">
-        <button class="w3-button w3-black" id="mutationDropdownButton" style="min-width: 100%">
-          <p style="display:inline;">{{mutation_choice_button_text}}</p>
-          <p style="display:inline;" id="mutationDropdownButtonText"></p>
-        </button>
-      </div>
-      <div onclick="updateMutation('{{mutation}}')" class="w3-button w3-col l2 m4" id="updateMutation">
-        <p>{{update_mutation_button_text}}:</p>
-        <p class="w3-strong" id="updateMutationText">
-          {{mutation}}
-        </p>
-      </div>
-    </div>
-    <div class="w3-row w3-green">
-      <div class="w3-container w3-padding-24 w3-col l10 m9">
-        <div id="dateRangeSlider"></div>
-      </div>
-      <div onclick="updateDate('{{min_date}}', '{{max_date}}')" class="w3-green w3-button w3-col l2 m3" id="updateDate">
-        <p>{{update_date_button_text}}:</p>
-        <p class="w3-strong" id="updateDateText">
-          {{min_date}} - {{max_date}}
-        </p>
-      </div>
-    </div>
     <p class="w3-strong info_header_text">
       {{mutation_info_header}}
     </p>
-    <div class="w3-border">
-      <div id="coronaplot"></div>
+    <div class="w3-row w3-green w3-col l3 m3">
+        <div onclick="home()" class="w3-right w3-button w3-col">{{home_button_text}}</div>
+        <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col">
+          <button onclick="mainDropdown()" class="w3-button w3-black" style="min-width: 100%">
+            <p style="display:inline;">{{gene_choice_button_text}}</p>
+            <p style="display:inline;" id="geneDropdownButtonText"></p>
+          </button>
+          <div id="gene" class="w3-dropdown-content w3-bar-block w3-border" style="max-height:250px; overflow:auto;"></div>
+        </div>
+        <div class="w3-container w3-padding w3-green w3-dropdown-click w3-col" id="mutation">
+          <button class="w3-btn w3-black" id="mutationDropdownButton" style="min-width: 100%">
+            <p style="display:inline;">{{mutation_choice_button_text}}</p>
+            <p style="display:inline;" id="mutationDropdownButtonText"></p>
+            <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
+          </button>
+        </div>
+        <div onclick="updateMutation('{{mutation}}')" class="w3-button w3-col" id="updateMutation">
+          <p style="display:inline;">{{update_mutation_button_text}}:</p>
+          <p class="w3-strong" id="updateMutationText" style="display:inline;">
+            {{mutation}}
+          </p>
+        </div>
+        <div class="w3-container w3-padding-24 w3-col">
+          <div id="dateRangeSlider"></div>
+        </div>
+        <div onclick="updateDate('{{min_date}}', '{{max_date}}')" class="w3-green w3-button w3-col" id="updateDate">
+          <p style="display:inline;">{{update_date_button_text}}:</p>
+          <p class="w3-strong" id="updateDateText" style="display:inline;">
+            {{min_date}} - {{max_date}}
+          </p>
+        </div>
+        <div class="w3-border w3-col w3-btn" onclick="outbreakInfoLink('{{outbreak_info_link}}')">
+          <p>{{further_information_text}}</p>
+        </div>
     </div>
-    <div class=w3-boreder>
-      <a href="{{outbreak_info_link}}" class="further_information">{{further_information_text}}</a>
+    <div class="w3-col l9 m9">
+      <div class="w3-border">
+        <div id="coronaplot"></div>
+      </div>
     </div>
   </div>
 
