--- a/Server/static/css/style.css
+++ b/Server/static/css/style.css
@@ -7,7 +7,6 @@
 }
 
 .further_information {
-  white-space: normal;
-  text-decoration: none;
-  font-size: 20px;
+    white-space: normal;
+    font-size: medium;
 }
