--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -38,17 +38,16 @@
 
 <body>
   <header class="w3-bar w3-green">
-    <img src="static/img/logo.png" class="w3-image w3-margin" width="100" height="100">
-    <div onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</div>
-    <div class="w3-container w3-center w3-border w3-border-red w3-round-xxlarge w3-center w3-margin w3-grey">
-      <p class="welcome_text">
-        {{welcome_text}}
-      </p>
-    </div>
+	<img src="static/img/logo.png" class="w3-image w3-margin" width="100" height="100">
+	<span class="welcome_text">taxameter.ru</span>
+	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
   </header>
 
 
   <div class="w3-row w3-margin w3-padding">
+      {{welcome_text}}
+    </p>
+
     <p class="w3-strong info_header_text">
       {{mutation_info_header}}
     </p>
@@ -68,25 +67,22 @@
             <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
           </button>
         </div>
-        <div onclick="updateMutation('{{mutation}}')" class="w3-button w3-col" id="updateMutation">
-          <p style="display:inline;">{{update_mutation_button_text}}:</p>
-          <p class="w3-strong" id="updateMutationText" style="display:inline;">
-            {{mutation}}
-          </p>
-        </div>
         <div class="w3-container w3-padding-24 w3-col">
           <div id="dateRangeSlider"></div>
         </div>
-        <div onclick="updateDate('{{min_date}}', '{{max_date}}')" class="w3-green w3-button w3-col" id="updateDate">
-          <p style="display:inline;">{{update_date_button_text}}:</p>
-          <p class="w3-strong" id="updateDateText" style="display:inline;">
-            {{min_date}} - {{max_date}}
-          </p>
+        <div class="w3-border w3-col w3-green w3-button" id="update">
+          <p>{{update_button_text}}</p>
         </div>
-        <div class="w3-border w3-col w3-btn" onclick="outbreakInfoLink('{{outbreak_info_link}}')">
-          <p>{{further_information_text}}</p>
+      	<div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-green w3-button w3-col further_information" id="updateDate">
+                <p style="display:inline;">{{further_information_text}} {{mutation}}</p>
         </div>
-    </div>
+      </div>
+<!--
+	<div class="further_information w3-green w3-button w3-col" onclick="outbreakInfoLink('{{outbreak_info_link}}')">
+	    {{further_information_text}} {{mutation}}
+        </div>
+
+-->
     <div class="w3-col l9 m9">
       <div class="w3-border">
         <div id="coronaplot"></div>
