Logo changed, minimum date changed, date-picker database bug fixed

--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -38,7 +38,7 @@
 
 <body>
   <header class="w3-bar w3-light-green">
-	<img src="static/img/logo.png" class="w3-image w3-margin" width="100" height="100">
+	<img src="static/img/logo.svg" class="w3-image w3-margin" width="100" height="100">
 	<span class="welcome_text">taxameter.ru</span>
 	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
   </header>
