--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -52,7 +52,7 @@
       {{mutation_info_header}}
     </p>
     <div class="w3-row w3-light-green w3-col l3 m3">
-        <div onclick="home()" class="w3-margin w3-btn w3-col w3-black my-btn">{{home_button_text}}</div>
+        <div onclick="home()" class="w3-margin w3-btn w3-col w3-brown my-btn">{{home_button_text}}</div>
         <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
           <button onclick="mainDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
             <p style="display:inline;">{{gene_choice_button_text}}</p>
@@ -73,7 +73,7 @@
         <div class="w3-border w3-margin w3-col w3-btn w3-black my-btn" id="update">
           <p>{{update_button_text}}</p>
         </div>
-      	<div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-black my-btn" id="updateDate">
+      	<div onclick="outbreakInfoLink('{{outbreak_info_link}}')" class="w3-margin w3-btn w3-col further_information w3-brown my-btn" id="updateDate">
           <p style="display:inline;">{{further_information_text}} {{mutation}}</p>
         </div>
       </div>
