--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -38,7 +38,7 @@
 
 <body>
   <header class="w3-bar w3-light-green">
-	<img src="static/img/logo.svg" class="w3-image w3-margin" width="100" height="100">
+	<img src="static/img/logo.svg" class="w3-image" width="100" height="100">
 	<span class="welcome_text">taxameter.ru</span>
 	<span onclick="switch_lang()" class="w3-right w3-button">{{lang_sw}}</span>
   </header>
@@ -53,6 +53,9 @@
     </p>
     <div class="w3-row w3-light-green w3-col l3 m3">
         <div onclick="home()" class="w3-margin w3-btn w3-col w3-brown my-btn">{{home_button_text}}</div>
+        <p class="w3-strong info_header_text w3-margin">
+          {{variables_text}}
+        </p>
         <div class="w3-container w3-padding w3-light-green w3-dropdown-click w3-col">
           <button onclick="mainDropdown()" class="w3-btn w3-black my-btn" style="min-width: 100%">
             <p style="display:inline;">{{gene_choice_button_text}}</p>
@@ -67,7 +70,10 @@
             <p style="display:inline;" id="mutationNameDropdownButtonText"></p>
           </button>
         </div>
-        <div class="w3-container w3-padding-24 w3-col">
+        <p class="w3-strong info_header_text w3-margin">
+          {{date_slider_text}}
+        </p>
+        <div class="w3-container w3-padding w3-col">
           <div id="dateRangeSlider"></div>
         </div>
         <div class="w3-border w3-margin w3-col w3-btn w3-black my-btn" id="update">
