--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -72,6 +72,14 @@
           </button>
         </div>
         <p class="w3-strong w3-margin">
+          {{example_text}}
+          <a href="/?mutation=lineage:B.1.1.7&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Alpha (B.1.1.7)</a>,
+          <a href="/?mutation=lineage:B.1.351&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Beta (B.1.351)</a>,
+          <a href="/?mutation=lineage:B.1.617.2&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">Delta (B.1.617.2)</a>,
+          <a href="/?mutation=S:N501Y&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">S:N501Y</a>,
+          <a href="/?mutation=N:A211V&lang={{lang}}&min_date={{min_date}}&max_date={{max_date}}">N:A211V</a>
+        </p>
+        <p class="w3-strong w3-margin">
           {{date_slider_text}}
         </p>
         <div class="w3-container w3-padding w3-col">
